--- a/templates/settings_profile/profile.html.twig
+++ b/templates/settings_profile/profile.html.twig
@@ -1,12 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Create new post{% endblock %}
+{% block title %}Profile Settings{% endblock %}
 
 {% block bread %}
   - Profile Settings
 {% endblock %}
 
 {% block body %}
+  {{ include('settings_profile/_settings_profile_tabs.html.twig') }}
   {{ form_start(form) }}
   {{ include('settings_profile/_profile_form.html.twig') }}
   <button
